--- a/DiabetesApp/app/src/main/res/values/strings.xml
+++ b/DiabetesApp/app/src/main/res/values/strings.xml
@@ -4,9 +4,12 @@
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password</string>
     <string name="action_sign_in">Sign in or register</string>
-    <string name="action_sign_in_short">Sign in</string>
+    <string name="action_sign_in_short">SIGN IN</string>
     <string name="welcome">"Welcome !"</string>
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
+    <string name="app_name_logo">korta</string>
+    <string name="action_sign_in_back">CANCEL</string>
+    <string name="title_activity_doctor_login">Doctor Login</string>
 </resources>
