Added graphing library

--- a/Doctor_App/app/src/main/res/values/strings.xml
+++ b/Doctor_App/app/src/main/res/values/strings.xml
@@ -20,6 +20,8 @@
     <string name="phone_number">+123 456 789 234</string>
     <string name="patient_caps">PATIENT</string>
     <string name="empty_state_doctor">Add a patient and they will show up here.</string>
+    <string name="chart_line">Last Five Days</string>
+    <string name="name">Name</string>
 
     <string-array name="numbers">
         <item>One</item>
