--- a/DiabetesApp/app/src/main/res/values/strings.xml
+++ b/DiabetesApp/app/src/main/res/values/strings.xml
@@ -20,5 +20,7 @@
     <string name="phone_number">+123 456 789 234</string>
     <string name="patient_caps">PATIENT</string>
     <string name="empty_state_doctor">Add a patient and they will show up here.</string>
-    <string name="session">Session</string>
+    <string name="session"></string>
+    <string name="prompt_username">Username</string>
+    <string name="prompt_weight">Weight</string>
 </resources>
