--- a/Doctor_App/app/src/main/res/values/strings.xml
+++ b/Doctor_App/app/src/main/res/values/strings.xml
@@ -54,4 +54,6 @@
     <string name="average_bg">Average BG = 6.2444 +/-2.077412098</string>
     <string name="prompt_username">Username</string>
     <string name="username_hint">e.g. John</string>
+    <string name="blood_pressure">Blood Pressure</string>
+    <string name="all_readings">All Readings</string>
 </resources>
