Added UI for viewing and creating comments

--- a/Doctor_App/app/src/main/res/values/strings.xml
+++ b/Doctor_App/app/src/main/res/values/strings.xml
@@ -56,9 +56,13 @@
     <string name="username_hint">e.g. John</string>
     <string name="blood_pressure">Blood Pressure</string>
     <string name="all_readings">All Readings</string>
-    <string name="graph_list_view">Diary</string>
+    <string name="graph_list_view">Readings</string>
     <string name="update_patient">Update Patient</string>
     <string name="update_details">Edit Details</string>
     <string name="edit">Edit</string>
     <string name="doctor_id">Doctor ID</string>
+    <string name="log">COMMENTS</string>
+    <string name="add_comment">COMMENT</string>
+    <string name="new_comment">ADD COMMENT</string>
+    <string name="prompt_comment">Comment</string>
 </resources>
